--- a/notebooks/Exploratory.ipynb
+++ b/notebooks/Exploratory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,384 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NUMERO_CASO</th>\n",
+       "      <th>NUMERO_BANCO</th>\n",
+       "      <th>NUMERO_AGENCIA</th>\n",
+       "      <th>NUMERO_CONTA</th>\n",
+       "      <th>TIPO</th>\n",
+       "      <th>CPF_CNPJ_TITULAR</th>\n",
+       "      <th>CNAB</th>\n",
+       "      <th>CNAB=101</th>\n",
+       "      <th>CNAB=119</th>\n",
+       "      <th>CNAB=120</th>\n",
+       "      <th>...</th>\n",
+       "      <th>NUMERO_AGENCIA_OD</th>\n",
+       "      <th>NUMERO_CONTA_OD</th>\n",
+       "      <th>I-a</th>\n",
+       "      <th>I-b</th>\n",
+       "      <th>I-c</th>\n",
+       "      <th>I-d</th>\n",
+       "      <th>I-e</th>\n",
+       "      <th>DIA_LANCAMENTO</th>\n",
+       "      <th>MES_LANCAMENTO</th>\n",
+       "      <th>ANO_LANCAMENTO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CASO-01-L1K4U4</td>\n",
+       "      <td>O6Y</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>153602</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ZS9104223348</td>\n",
+       "      <td>218</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CASO-01-L1K4U4</td>\n",
+       "      <td>O6Y</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>153602</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ZS9104223348</td>\n",
+       "      <td>218</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CASO-01-L1K4U4</td>\n",
+       "      <td>L6X</td>\n",
+       "      <td>742</td>\n",
+       "      <td>810886</td>\n",
+       "      <td>2</td>\n",
+       "      <td>RJ3341718546</td>\n",
+       "      <td>211</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CASO-01-L1K4U4</td>\n",
+       "      <td>L6X</td>\n",
+       "      <td>742</td>\n",
+       "      <td>810886</td>\n",
+       "      <td>2</td>\n",
+       "      <td>RJ3341718546</td>\n",
+       "      <td>211</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CASO-01-L1K4U4</td>\n",
+       "      <td>W5Y</td>\n",
+       "      <td>554</td>\n",
+       "      <td>902093</td>\n",
+       "      <td>1</td>\n",
+       "      <td>IK6356601049</td>\n",
+       "      <td>201</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138300</th>\n",
+       "      <td>CASO-01-L1K4U4</td>\n",
+       "      <td>O9A</td>\n",
+       "      <td>490</td>\n",
+       "      <td>296083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>KO2307484082</td>\n",
+       "      <td>206</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>490</td>\n",
+       "      <td>296083.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138301</th>\n",
+       "      <td>CASO-01-L1K4U4</td>\n",
+       "      <td>O9A</td>\n",
+       "      <td>490</td>\n",
+       "      <td>296083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>KO2307484082</td>\n",
+       "      <td>102</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138302</th>\n",
+       "      <td>CASO-01-L1K4U4</td>\n",
+       "      <td>O9A</td>\n",
+       "      <td>490</td>\n",
+       "      <td>296083</td>\n",
+       "      <td>2</td>\n",
+       "      <td>KO2307484082</td>\n",
+       "      <td>102</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>490</td>\n",
+       "      <td>296083.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138303</th>\n",
+       "      <td>CASO-01-L1K4U4</td>\n",
+       "      <td>O6Y</td>\n",
+       "      <td>5776</td>\n",
+       "      <td>191834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>KO2307484082</td>\n",
+       "      <td>205</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138304</th>\n",
+       "      <td>CASO-01-L1K4U4</td>\n",
+       "      <td>O6Y</td>\n",
+       "      <td>5776</td>\n",
+       "      <td>191834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>KO2307484082</td>\n",
+       "      <td>205</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>138305 rows × 47 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           NUMERO_CASO NUMERO_BANCO  NUMERO_AGENCIA  NUMERO_CONTA  TIPO  \\\n",
+       "0       CASO-01-L1K4U4          O6Y            1965        153602     2   \n",
+       "1       CASO-01-L1K4U4          O6Y            1965        153602     2   \n",
+       "2       CASO-01-L1K4U4          L6X             742        810886     2   \n",
+       "3       CASO-01-L1K4U4          L6X             742        810886     2   \n",
+       "4       CASO-01-L1K4U4          W5Y             554        902093     1   \n",
+       "...                ...          ...             ...           ...   ...   \n",
+       "138300  CASO-01-L1K4U4          O9A             490        296083     1   \n",
+       "138301  CASO-01-L1K4U4          O9A             490        296083     1   \n",
+       "138302  CASO-01-L1K4U4          O9A             490        296083     2   \n",
+       "138303  CASO-01-L1K4U4          O6Y            5776        191834     1   \n",
+       "138304  CASO-01-L1K4U4          O6Y            5776        191834     1   \n",
+       "\n",
+       "       CPF_CNPJ_TITULAR  CNAB  CNAB=101  CNAB=119  CNAB=120  ...  \\\n",
+       "0          ZS9104223348   218         0         0         0  ...   \n",
+       "1          ZS9104223348   218         0         0         0  ...   \n",
+       "2          RJ3341718546   211         0         0         0  ...   \n",
+       "3          RJ3341718546   211         0         0         0  ...   \n",
+       "4          IK6356601049   201         0         0         0  ...   \n",
+       "...                 ...   ...       ...       ...       ...  ...   \n",
+       "138300     KO2307484082   206         0         0         0  ...   \n",
+       "138301     KO2307484082   102         0         0         0  ...   \n",
+       "138302     KO2307484082   102         0         0         0  ...   \n",
+       "138303     KO2307484082   205         0         0         0  ...   \n",
+       "138304     KO2307484082   205         0         0         0  ...   \n",
+       "\n",
+       "        NUMERO_AGENCIA_OD  NUMERO_CONTA_OD  I-a  I-b  I-c  I-d  I-e  \\\n",
+       "0                       0              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "1                       0              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "2                      75              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "3                      75              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "4                       0              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "...                   ...              ...  ...  ...  ...  ...  ...   \n",
+       "138300                490         296083.0  NaN  NaN  NaN  NaN  NaN   \n",
+       "138301                  0              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "138302                490         296083.0  NaN  NaN  NaN  NaN  NaN   \n",
+       "138303                  0              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "138304                  0              NaN  NaN  NaN  NaN  NaN  NaN   \n",
+       "\n",
+       "        DIA_LANCAMENTO  MES_LANCAMENTO  ANO_LANCAMENTO  \n",
+       "0                    1               1            2017  \n",
+       "1                    1               1            2017  \n",
+       "2                    2               1            2017  \n",
+       "3                    2               1            2017  \n",
+       "4                    2               1            2017  \n",
+       "...                ...             ...             ...  \n",
+       "138300               1               3            2021  \n",
+       "138301               1               3            2021  \n",
+       "138302               1               3            2021  \n",
+       "138303               1               3            2021  \n",
+       "138304               1               3            2021  \n",
+       "\n",
+       "[138305 rows x 47 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "path = \"/data/pcpe_01.csv\"\n",
     "df = pd.read_csv(path, delimiter=';')\n",
@@ -47,14 +422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1536,7 @@
        "[35 rows x 46 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +2039,7 @@
        "[20817 rows x 47 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1821,7 +2196,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1832,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1843,7 +2218,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1854,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +2248,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -140208,7 +140583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -140223,7 +140598,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140251,9 +140626,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(138305, 45)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
@@ -140264,7 +140650,8 @@
     "X_onehot = encoder.fit_transform(df[columns_cat]).toarray() #tipo, cnab e natureza do saldo\n",
     "X_num = scaler.fit_transform(df[columns_num])\n",
     "\n",
-    "X = np.column_stack([X_onehot, X_num])"
+    "X = np.column_stack([X_onehot, X_num])\n",
+    "X.shape"
    ]
   },
   {
