import in pipeline not working

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,21 +464,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "ename": "ImportError",
-     "evalue": "cannot import name 'NumbericlTransfomer' from partially initialized module 'mlex' (most likely due to a circular import) (/data/isa/mlex/mlex/__init__.py)",
+     "evalue": "cannot import name 'PastFutureSplit' from partially initialized module 'mlex' (most likely due to a circular import) (/data/isa/mlex/mlex/__init__.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CompositeTranformer\n\u001b[1;32m      2\u001b[0m tranformer \u001b[38;5;241m=\u001b[39m CompositeTranformer(\n\u001b[1;32m      3\u001b[0m      numeric_features\u001b[38;5;241m=\u001b[39mcolumns_num,\n\u001b[1;32m      4\u001b[0m     categorical_features\u001b[38;5;241m=\u001b[39mcolumns_cat\n\u001b[1;32m      5\u001b[0m )\n\u001b[1;32m      6\u001b[0m Xt \u001b[38;5;241m=\u001b[39m tranformer\u001b[38;5;241m.\u001b[39mfit_transform(df)\n",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CompositeTranformer\n\u001b[1;32m      2\u001b[0m tranformer \u001b[38;5;241m=\u001b[39m CompositeTranformer(\n\u001b[1;32m      3\u001b[0m      numeric_features\u001b[38;5;241m=\u001b[39mcolumns_num,\n\u001b[1;32m      4\u001b[0m     categorical_features\u001b[38;5;241m=\u001b[39mcolumns_cat\n\u001b[1;32m      5\u001b[0m )\n\u001b[1;32m      6\u001b[0m Xt \u001b[38;5;241m=\u001b[39m tranformer\u001b[38;5;241m.\u001b[39mfit_transform(df)\n",
       "File \u001b[0;32m/data/isa/mlex/mlex/__init__.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeatures\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipelines\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
       "File \u001b[0;32m/data/isa/mlex/mlex/pipelines/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msimple_pipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "File \u001b[0;32m/data/isa/mlex/mlex/pipelines/simple_pipeline.py:15\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     11\u001b[0m     Pipeline, \n\u001b[1;32m     12\u001b[0m     FeatureUnion\n\u001b[1;32m     13\u001b[0m ) \n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfunctools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m reduce\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     16\u001b[0m     NumbericlTransfomer,\n\u001b[1;32m     17\u001b[0m     CategoricaOneHotlTransfomer,\n\u001b[1;32m     18\u001b[0m     CompositeTranformer\n\u001b[1;32m     19\u001b[0m )\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     22\u001b[0m     SequenceTransfomer\n\u001b[1;32m     23\u001b[0m )\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m(\n\u001b[1;32m     26\u001b[0m     PastFutureSplit\n\u001b[1;32m     27\u001b[0m )\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'NumbericlTransfomer' from partially initialized module 'mlex' (most likely due to a circular import) (/data/isa/mlex/mlex/__init__.py)"
+      "File \u001b[0;32m/data/isa/mlex/mlex/pipelines/simple_pipeline.py:25\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     16\u001b[0m     NumericalTransfomer,\n\u001b[1;32m     17\u001b[0m     CategoricalOneHotTransfomer,\n\u001b[1;32m     18\u001b[0m     CompositeTranformer\n\u001b[1;32m     19\u001b[0m )\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     22\u001b[0m     SequenceTransfomer\n\u001b[1;32m     23\u001b[0m )\n\u001b[0;32m---> 25\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m(\n\u001b[1;32m     26\u001b[0m     PastFutureSplit\n\u001b[1;32m     27\u001b[0m )\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSimplePipeline\u001b[39;00m(BaseEstimator, ClassifierMixin):\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     32\u001b[0m                  numeric_features, \n\u001b[1;32m     33\u001b[0m                  categorical_features,\n\u001b[1;32m     34\u001b[0m                  final_model,   \u001b[38;5;66;03m#o que seria esse final mode? um exemplo?\u001b[39;00m\n\u001b[1;32m     35\u001b[0m                  epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, \u001b[38;5;66;03m#input_shape\u001b[39;00m\n\u001b[1;32m     36\u001b[0m                  ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'PastFutureSplit' from partially initialized module 'mlex' (most likely due to a circular import) (/data/isa/mlex/mlex/__init__.py)"
      ]
     }
    ],
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
