trying to use rnn model

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -464,28 +464,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'PastFutureSplit' from partially initialized module 'mlex' (most likely due to a circular import) (/data/isa/mlex/mlex/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CompositeTranformer\n\u001b[1;32m      2\u001b[0m tranformer \u001b[38;5;241m=\u001b[39m CompositeTranformer(\n\u001b[1;32m      3\u001b[0m      numeric_features\u001b[38;5;241m=\u001b[39mcolumns_num,\n\u001b[1;32m      4\u001b[0m     categorical_features\u001b[38;5;241m=\u001b[39mcolumns_cat\n\u001b[1;32m      5\u001b[0m )\n\u001b[1;32m      6\u001b[0m Xt \u001b[38;5;241m=\u001b[39m tranformer\u001b[38;5;241m.\u001b[39mfit_transform(df)\n",
-      "File \u001b[0;32m/data/isa/mlex/mlex/__init__.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeatures\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipelines\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "File \u001b[0;32m/data/isa/mlex/mlex/pipelines/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msimple_pipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "File \u001b[0;32m/data/isa/mlex/mlex/pipelines/simple_pipeline.py:25\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     16\u001b[0m     NumericalTransfomer,\n\u001b[1;32m     17\u001b[0m     CategoricalOneHotTransfomer,\n\u001b[1;32m     18\u001b[0m     CompositeTranformer\n\u001b[1;32m     19\u001b[0m )\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     22\u001b[0m     SequenceTransfomer\n\u001b[1;32m     23\u001b[0m )\n\u001b[0;32m---> 25\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m(\n\u001b[1;32m     26\u001b[0m     PastFutureSplit\n\u001b[1;32m     27\u001b[0m )\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSimplePipeline\u001b[39;00m(BaseEstimator, ClassifierMixin):\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     32\u001b[0m                  numeric_features, \n\u001b[1;32m     33\u001b[0m                  categorical_features,\n\u001b[1;32m     34\u001b[0m                  final_model,   \u001b[38;5;66;03m#o que seria esse final mode? um exemplo?\u001b[39;00m\n\u001b[1;32m     35\u001b[0m                  epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, \u001b[38;5;66;03m#input_shape\u001b[39;00m\n\u001b[1;32m     36\u001b[0m                  ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'PastFutureSplit' from partially initialized module 'mlex' (most likely due to a circular import) (/data/isa/mlex/mlex/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mlex import CompositeTranformer\n",
     "tranformer = CompositeTranformer(\n",
-    "     numeric_features=columns_num,\n",
+    "    numeric_features=columns_num,\n",
     "    categorical_features=columns_cat\n",
     ")\n",
     "Xt = tranformer.fit_transform(df)"
@@ -493,30 +478,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'SimpleRnn' object has no attribute 'final_model'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SimpleRnn\n\u001b[0;32m----> 2\u001b[0m model_simplernn \u001b[38;5;241m=\u001b[39m \u001b[43mSimpleRnn\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnumeric_features\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcolumns_num\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcategorical_features\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcolumns_cat\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# model_simplernn_fit = model_simplernn.fit(df, y)\u001b[39;00m\n",
-      "File \u001b[0;32m/data/isa/mlex/mlex/pipelines/simplernn.py:25\u001b[0m, in \u001b[0;36mSimpleRnn.__init__\u001b[0;34m(self, numeric_features, categorical_features)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumberic_feature \u001b[38;5;241m=\u001b[39m numeric_features\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcategorical_features \u001b[38;5;241m=\u001b[39m categorical_features\n\u001b[0;32m---> 25\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_build_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfinal_model \u001b[38;5;241m=\u001b[39m SimpleRnn()\n",
-      "File \u001b[0;32m/data/isa/mlex/mlex/pipelines/simplernn.py:50\u001b[0m, in \u001b[0;36mSimpleRnn._build_model\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_build_model\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m     42\u001b[0m     preprocessor \u001b[38;5;241m=\u001b[39m CompositeTranformer(\n\u001b[1;32m     43\u001b[0m         numeric_features\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumberic_feature, \n\u001b[1;32m     44\u001b[0m         categorical_features\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcategorical_features\n\u001b[1;32m     45\u001b[0m         )\n\u001b[1;32m     47\u001b[0m     model \u001b[38;5;241m=\u001b[39m Pipeline(\n\u001b[1;32m     48\u001b[0m         steps\u001b[38;5;241m=\u001b[39m[\n\u001b[1;32m     49\u001b[0m             (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpreprocessing\u001b[39m\u001b[38;5;124m\"\u001b[39m, preprocessor),\n\u001b[0;32m---> 50\u001b[0m             (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfinal_model\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfinal_model\u001b[49m),\n\u001b[1;32m     51\u001b[0m             ]\n\u001b[1;32m     52\u001b[0m         )\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m model\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SimpleRnn' object has no attribute 'final_model'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mlex import SimplePipeline\n",
+    "from mlex import SimpleRNNModel\n",
+    "\n",
+    "my_model = SimpleRNNModel(\n",
+    "    input_shape=Xt.shape\n",
+    ").get_model\n",
+    " \n",
+    "\n",
     "model_simplernn = SimplePipeline(\n",
     "    numeric_features=columns_num,\n",
-    "    categorical_features=columns_cat\n",
-    ")\n",
-    "# model_simplernn_fit = model_simplernn.fit(df, y)\n"
+    "    categorical_features=columns_cat,\n",
+    "    final_model= my_model\n",
+    ")"
    ]
   },
   {
