Updates to BaseModel

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -97,32 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.00000000e+00, 1.00000000e+00, 0.00000000e+00, ...,\n",
-       "        0.00000000e+00, 7.50000000e-08, 3.70279998e-05],\n",
-       "       [0.00000000e+00, 1.00000000e+00, 0.00000000e+00, ...,\n",
-       "        0.00000000e+00, 2.00000000e-07, 3.71987144e-05],\n",
-       "       [0.00000000e+00, 1.00000000e+00, 0.00000000e+00, ...,\n",
-       "        0.00000000e+00, 3.00000000e-08, 3.06547964e-04],\n",
-       "       ...,\n",
-       "       [0.00000000e+00, 1.00000000e+00, 0.00000000e+00, ...,\n",
-       "        1.81818182e-01, 1.19500000e-06, 4.91828803e-05],\n",
-       "       [1.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
-       "        1.81818182e-01, 0.00000000e+00, 8.02358685e-07],\n",
-       "       [1.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
-       "        1.81818182e-01, 0.00000000e+00, 8.02358685e-07]])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
@@ -133,9 +110,7 @@
     "X_onehot = encoder.fit_transform(df[columns_cat]).toarray()\n",
     "X_num = scaler.fit_transform(df[columns_num])\n",
     "\n",
-    "Xt = np.column_stack([X_onehot, X_num])\n",
-    "\n",
-    "Xt"
+    "Xt = np.column_stack([X_onehot, X_num])"
    ]
   },
   {
@@ -179,31 +154,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.engine.sequential.Sequential at 0x7fac80cb0040>"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from mlex.pipelines.simple_pipeline import SimplePipeline\n",
     "from mlex.models.models import SimpleRNNModel\n",
     "\n",
-    "my_model = SimpleRNNModel(\n",
-    "                    input_shape=Xt.shape\n",
-    "                    ).get_model\n",
-    " \n",
+    "my_model = SimpleRNNModel(input_shape=Xt.shape)\n",
     "\n",
+    "my_model.get_model()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_model.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " simple_rnn_2 (SimpleRNN)    (None, 138305, 16)        992       \n",
+      "                                                                 \n",
+      " simple_rnn_3 (SimpleRNN)    (None, 16)                528       \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 17        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1,537\n",
+      "Trainable params: 1,537\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = model_simplernn = SimplePipeline(\n",
     "    numeric_features=columns_num,\n",
     "    categorical_features=columns_cat,\n",
     "    final_model= my_model\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
